LITT Changelog:
===============
 * 2019-09-13: Simplified sel* helper methods.
 * 2019-09-13: Listings during add actions are now resistant to output action options like -c and -o.
 * 2019-09-13: Moved inputIsbn to Input functions and ISBN check functions to Utils.
 * 2019-09-13: Avoid duplicating the input regex check.
 * 2019-09-12: Cleaned up input functions.
 * 2019-09-12: Cleaned up toSecondsValue.
 * 2019-09-12: Bug fix: The ISBN check now verifies that it only contains numeric digits.
 * 2019-09-12: Bug fix: Getting the next ID value now works for an empty db!
 * 2019-09-12: Cleaned up string encoding conversion functions.
 * 2019-09-12: Took C++17 mode and SDK 10.0.17763.0 in use. Also Selection statements with initializer; P0305R1.
 * 2019-09-12: Bug fix: Detects invalid --colsep values while still allowing empty ones.
 * 2019-09-10: inputIsbn now uses ask instead of confirm so a default answer (n) can be given.
 * 2019-09-10: Bug fix: Must set errno to 0 before calling strtol/strtoull.
 * 2019-09-10: Tinkering; appendTo => +=, addColums => addResultColumns.
 * 2019-09-07: Decrease lines of code, mainly for brym and brmy.
 * 2019-09-06: Bug fix in explain query plan, did not handle multiple explain queries in same 
               output listing correctly. (Must render and restart when getting an id with lower value
               that the previous one it seems)
 * 2019-09-06: Added raw EQP -x option. Checks -x option values. Added more explain output for *bcy listings.
 * 2019-09-05: Simplified the *br* listings (listBooksReadPerPeriod) so that "Total" is handled
               same way as the other result columns. The HAVING condition is now applied to it too.
 * 2019-09-05: Changed the *br* listings (listBooksReadPerPeriod) so that they no longer fail
               when hitting the 64 table JOIN limit in SQLite (Had one JOIN per output column).
 * 2019-09-04: Modified (hacked) sqlite patternCompare function to support case sensitive 